<resources>
    <string name="app_name">Monetory Mind</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="add_image">Add Image</string>
    <string name="select_user">Select User</string>
    <string name="type_here">Type Here!</string>
    <string name="online">Online</string>
    <string name="personal_loans">Individual Category</string>
    <string name="business_loan">Business Category</string>
    <string name="emi_calculator">EMI Calculator</string>
    <string name="principle">Principle</string>
    <string name="rate">Rate</string>
    <string name="time">Time</string>
    <string name="calculate">Calculate</string>
    <string name="output">Output</string>
    <string name="alert_dialog">Alert dialog</string>
    <string name="monthly_emi">Monthly EMI:</string>
    <string name="quaterly_emi">Quaterly EMI:</string>
    <string name="yearly_emi">Yearly EMI:</string>
    <string name="car_loan">Car Loan</string>
    <string name="home_loan">Home Loan</string>
    <string name="personal_loan">Personal Loan</string>
    <string name="term_loan">Term Loan</string>
    <string name="working_capital_loan">Working Capital Loan</string>
    <string name="govt_loan_schemes">Govt. Loan Schemes</string>
    <string name="phone">Phone</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="verify_to_continue">Verify To Continue</string>
    <string name="phone_number">Phone Number</string>
    <string name="customer_id">Customer ID</string>
    <string name="educational_loan">Educational Loan</string>
    <string name="bank_name">Bank Name</string>
    <string name="card_details">Card Details</string>
    <string name="get_loan_from_best_bank">Get Loan From best Bank</string>
    <string name="get_details">GET Details</string>
    <string name="employment_details">Employment Details</string>
    <string name="validate_customer_id">Validate Customer ID</string>
    <string name="bill_discounting">Bill Discounting</string>
</resources>