<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/green"
    tools:context=".activities.EMICalculatorActivity">

    <View
        android:id="@+id/headerBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/viewSupporter"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12ssp"
        android:paddingEnd="@dimen/_5sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageSignOut"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_12ssp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:paddingEnd="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"
        android:background="@drawable/background_icon"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_logout"
        android:tint="@color/white" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/emi_calculator"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageBack"
        app:layout_constraintEnd_toStartOf="@id/imageSignOut"
        app:layout_constraintStart_toEndOf="@id/imageBack"
        app:layout_constraintTop_toTopOf="@id/imageBack"/>

    <View
        android:id="@+id/viewSupporter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary"
        android:layout_marginTop="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@id/imageBack"/>

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="@dimen/_224sdp"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginTop="316dp"
        android:backgroundTint="@color/primary"
        android:text="@string/calculate"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSupporter" />

    <EditText
        android:id="@+id/inputPrinciple"
        android:layout_width="224dp"
        android:layout_height="44dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/background_input"
        android:ems="10"
        android:hint="@string/principle"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/secondary_text"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSupporter" />

    <TextView
        android:id="@+id/textYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yearly_emi"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/_18sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSupporter"
        app:layout_constraintVertical_bias="0.891"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/outputYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/_18sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSupporter"
        app:layout_constraintVertical_bias="0.941"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/inpurtTime"
        android:layout_width="224dp"
        android:layout_height="44dp"
        android:layout_marginTop="232dp"
        android:background="@drawable/background_input"
        android:ems="10"
        android:hint="@string/time"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/secondary_text"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSupporter" />

    <TextView
        android:id="@+id/outputQuart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/_18sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSupporter"
        app:layout_constraintVertical_bias="0.809"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/outputMon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output"
        android:textColor="@color/teal_200"
        android:textSize="@dimen/_18sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSupporter"
        app:layout_constraintVertical_bias="0.68"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textMon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="196dp"
        android:text="@string/monthly_emi"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/_18sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSupporter"
        app:layout_constraintVertical_bias="0.916"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textQuat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quaterly_emi"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/_18sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSupporter"
        app:layout_constraintVertical_bias="0.759"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/inputRate"
        android:layout_width="224dp"
        android:layout_height="44dp"
        android:layout_marginTop="152dp"
        android:background="@drawable/background_input"
        android:ems="10"
        android:hint="@string/rate"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/secondary_text"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSupporter" />


</androidx.constraintlayout.widget.ConstraintLayout>