<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/green"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageProfile"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/background_icon"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="@dimen/_8sdp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageSignOut"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:background="@drawable/background_icon"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tint="@color/white" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageProfile"
        app:layout_constraintEnd_toStartOf="@id/imageSignOut"
        app:layout_constraintStart_toEndOf="@id/imageProfile"
        app:layout_constraintTop_toTopOf="@id/imageProfile" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/background_content_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageProfile">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/conversationsRecycleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:padding="@dimen/_20sdp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <RelativeLayout
            android:layout_width="357dp"
            android:layout_height="553dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="188dp"
                android:layout_height="177dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:src="@mipmap/ic_launcher_foreground" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPersonalLoan"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_alignTop="@id/logo"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="212dp"
                android:layout_marginRight="@dimen/_10sdp"
                android:backgroundTint="@color/primary"
                android:text="@string/personal_loans"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonBusinessLoan"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_alignTop="@+id/buttonPersonalLoan"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="92dp"
                android:layout_marginRight="@dimen/_10sdp"
                android:backgroundTint="@color/primary"
                android:text="@string/business_loan"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEMICal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_alignTop="@+id/buttonBusinessLoan"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="92dp"
                android:layout_marginRight="@dimen/_10sdp"
                android:backgroundTint="@color/primary"
                android:text="@string/emi_calculator"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/alert_dialog"
                android:visibility="gone"/>

        </RelativeLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>